Skip tests only for powervs runs

--- a/ci-operator/step-registry/ipi/install/libvirt/install/ipi-install-libvirt-install-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/libvirt/install/ipi-install-libvirt-install-ref.yaml
@@ -6,6 +6,7 @@ ref:
   env:
   - name: ARCH
   - name: BRANCH
+  - name: INSTALLER
   - name: MASTER_REPLICAS
     default: "3"
   - name: MASTER_MEMORY
