--- a/ci-operator/config/openshift/microshift/openshift-microshift-release-4.13.yaml
+++ b/ci-operator/config/openshift/microshift/openshift-microshift-release-4.13.yaml
@@ -154,6 +154,8 @@ tests:
 - as: rebase-on-nightlies
   cron: 0 5 * * 1-5
   steps:
+    env:
+      EC2_AMI: ami-02b8534ff4b424939
     workflow: openshift-microshift-rebase
 - as: e2e-loadbalancer-smoke-test
   cluster: build02
