--- a/ci-operator/step-registry/openshift/microshift/infra/pmlogs/openshift-microshift-infra-pmlogs-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/infra/pmlogs/openshift-microshift-infra-pmlogs-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: openshift-microshift-infra-pmlogs
-  from: tests
+  from: test-runtime
   commands: openshift-microshift-infra-pmlogs-commands.sh
   resources:
     requests:
