--- a/ci-operator/step-registry/openshift/microshift/infra/wait-for-cluster-up-aws/openshift-microshift-infra-wait-for-cluster-up-aws-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/infra/wait-for-cluster-up-aws/openshift-microshift-infra-wait-for-cluster-up-aws-ref.yaml
@@ -1,6 +1,7 @@
 ref:
   as: openshift-microshift-infra-wait-for-cluster-up-aws
-  from: tests
+  from: test-runtime
+  cli: latest
   grace_period: 10m
   commands: openshift-microshift-infra-wait-for-cluster-up-aws-commands.sh
   resources:
