--- a/ci-operator/step-registry/openshift/microshift/rebase/openshift-microshift-rebase-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/rebase/openshift-microshift-rebase-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: openshift-microshift-rebase
-  from: rebase-payload
+  from: src
   cli: latest
   grace_period: 30m
   commands: openshift-microshift-rebase-commands.sh
@@ -23,5 +23,8 @@ ref:
     - name: pr-creds
       namespace: test-credentials
       mount_path: /secrets/pr-creds
+    - name: microshift-rhsm-creds
+      namespace: test-credentials
+      mount_path: /var/run/rhsm/
   documentation: |-
     This step rebases MicroShift to release:nightly-amd64 and release:nightly-arm64, respectively. Requires a pull-secret for the app.ci registry and credentials to push a branch and create a PR on MicroShift repository.
