--- a/ci-operator/config/openshift/microshift/openshift-microshift-release-4.14.yaml
+++ b/ci-operator/config/openshift/microshift/openshift-microshift-release-4.14.yaml
@@ -129,6 +129,7 @@ tests:
   steps:
     env:
       DRY_RUN: "y"
+      EC2_AMI: ami-02b8534ff4b424939
     workflow: openshift-microshift-rebase
 - as: microshift-metal-tests
   cluster: build02
@@ -152,6 +153,8 @@ tests:
 - as: rebase-on-nightlies
   cron: 0 5 * * 1-5
   steps:
+    env:
+      EC2_AMI: ami-02b8534ff4b424939
     workflow: openshift-microshift-rebase
 - as: metal-periodic-test
   cluster: build02
