--- a/ci-operator/config/openshift/microshift/openshift-microshift-release-4.15.yaml
+++ b/ci-operator/config/openshift/microshift/openshift-microshift-release-4.15.yaml
@@ -130,6 +130,7 @@ tests:
   steps:
     env:
       DRY_RUN: "y"
+      EC2_AMI: ami-02b8534ff4b424939
     workflow: openshift-microshift-rebase
 - as: microshift-metal-tests
   cluster: build02
