--- a/ci-operator/step-registry/openshift/microshift/e2e/metal-tests/openshift-microshift-e2e-metal-tests-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/e2e/metal-tests/openshift-microshift-e2e-metal-tests-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: openshift-microshift-e2e-metal-tests
-  from: tests
+  from: test-runtime
   commands: openshift-microshift-e2e-metal-tests-commands.sh
   resources:
     requests:
