--- a/ci-operator/step-registry/openshift/microshift/rebase/openshift-microshift-rebase-workflow.yaml
+++ b/ci-operator/step-registry/openshift/microshift/rebase/openshift-microshift-rebase-workflow.yaml
@@ -1,7 +1,12 @@
 workflow:
   as: openshift-microshift-rebase
   steps:
+    allow_best_effort_post_steps: true
+    #pre:
+    #- chain: openshift-microshift-infra-aws-ec2
     test:
-      - chain: openshift-microshift-rebase
+    - ref: openshift-microshift-rebase
+    #post:
+    #- ref: aws-deprovision-stacks
   documentation: |-
     This workflow rebases MicroShift onto a given version of OpenShift and submits a PR.
