use rhel-9-golang-1.20-openshift-4.15 as a builder image

--- a/ci-operator/config/openshift/ci-ns-ttl-controller/openshift-ci-ns-ttl-controller-master.yaml
+++ b/ci-operator/config/openshift/ci-ns-ttl-controller/openshift-ci-ns-ttl-controller-master.yaml
@@ -6,9 +6,9 @@ base_images:
 binary_build_commands: make CGO_ENABLED=0 install
 build_root:
   image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+    name: builder
+    namespace: ocp
+    tag: rhel-9-golang-1.20-openshift-4.15
 images:
 - context_dir: image/
   from: os
