--- a/ci-operator/config/openshift/ci-ns-ttl-controller/openshift-ci-ns-ttl-controller-master.yaml
+++ b/ci-operator/config/openshift/ci-ns-ttl-controller/openshift-ci-ns-ttl-controller-master.yaml
@@ -1,8 +1,8 @@
 base_images:
   os:
-    name: alpine
-    namespace: ci
-    tag: "3.10"
+    name: centos
+    namespace: openshift
+    tag: stream9
 binary_build_commands: make CGO_ENABLED=0 install
 build_root:
   image_stream_tag:
