--- a/ci-operator/step-registry/hypershift/kubevirt/run-e2e-local/hypershift-kubevirt-run-e2e-local-chain.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/run-e2e-local/hypershift-kubevirt-run-e2e-local-chain.yaml
@@ -4,6 +4,8 @@ chain:
   - as: run-e2e-local
     cli: latest
     commands: |-
+        echo "sleep for 28800"
+        sleep 28800
         # compile the e2e tests
         make e2e
       
