--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
@@ -52,20 +52,16 @@ tests:
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
     cluster_profile: aws
-    env:
-      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
       commands: |
-        oc create namespace "$INSTALL_NAMESPACE"
-        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
-        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
+        oc create namespace openshift-gitops-operator
+        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
-      env:
-      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -85,20 +81,15 @@ tests:
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
     cluster_profile: aws
-    env:
-      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: |
-        oc create namespace "$INSTALL_NAMESPACE"
-        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
-        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
+        oc create namespace openshift-gitops-operator
+        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
-      env:
-      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -131,20 +122,15 @@ tests:
   cron: 0 0 * * *
   steps:
     cluster_profile: aws
-    env:
-      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: |
-        oc create namespace "$INSTALL_NAMESPACE"
-        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
-        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
+        oc create namespace openshift-gitops-operator
+        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
-      env:
-      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -164,20 +150,15 @@ tests:
   cron: 0 0 * * *
   steps:
     cluster_profile: aws
-    env:
-      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: |
-        oc create namespace "$INSTALL_NAMESPACE"
-        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
-        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
+        oc create namespace openshift-gitops-operator
+        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
-      env:
-      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
