WIP: Enable e2e openstack tests for dualstack techprev

--- a/ci-operator/step-registry/openshift/e2e/openstack/dualstack/openshift-e2e-openstack-dualstack-workflow.yaml
+++ b/ci-operator/step-registry/openshift/e2e/openstack/dualstack/openshift-e2e-openstack-dualstack-workflow.yaml
@@ -3,6 +3,8 @@ workflow:
   steps:
     pre:
       - chain: ipi-openstack-pre
+    test:
+      - chain: openstack-test-e2e
     post:
       - chain: ipi-openstack-post
     env:
