Correcting config mistake
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
@@ -84,6 +84,7 @@ tests:
     test:
     - as: install
       cli: latest
+      commands: |
         oc create namespace openshift-gitops-operator
         operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
@@ -125,6 +126,7 @@ tests:
     test:
     - as: install
       cli: latest
+      commands: |
         oc create namespace openshift-gitops-operator
         operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
@@ -153,6 +155,7 @@ tests:
     test:
     - as: install
       cli: latest
+      commands: |
         oc create namespace openshift-gitops-operator
         operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
