--- a/ci-operator/jobs/shiftstack/shiftstack-ci/shiftstack-shiftstack-ci-main-periodics.yaml
+++ b/ci-operator/jobs/shiftstack/shiftstack-ci/shiftstack-shiftstack-ci-main-periodics.yaml
@@ -7607,6 +7607,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-additional-ipv6-network
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -7683,6 +7691,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 240h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-ccpmso
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -7759,6 +7775,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 240h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-ccpmso-zone
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -7834,6 +7858,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-csi-cinder
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -7909,6 +7941,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-csi-manila
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -7984,6 +8024,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 96h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-dualstack-techpreview
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8059,6 +8107,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 168h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-externallb
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8134,6 +8190,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 48h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-fips
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8209,6 +8273,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 48h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-nfv-hwoffload
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8284,6 +8356,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-nfv-intel
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8359,6 +8439,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-nfv-mellanox
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8434,6 +8522,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 168h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-ovn-etcd-scaling
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8509,6 +8605,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 24h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-ovn-parallel
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8584,6 +8688,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 24h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-ovn-password
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8659,6 +8771,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 24h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-ovn-serial
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8734,6 +8854,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-proxy
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8809,6 +8937,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 72h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-sdn
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8884,6 +9020,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 240h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-e2e-openstack-upi
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
@@ -8959,6 +9103,14 @@ periodics:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
   minimum_interval: 168h
   name: periodic-ci-shiftstack-shiftstack-ci-main-periodic-4.15-upgrade-from-stable-4.14-e2e-openstack-ovn-upgrade
+  reporter_config:
+    slack:
+      channel: '#shiftstack-bot'
+      job_states_to_report:
+      - failure
+      - error
+      report_template: ':volcano: Job *{{.Spec.Job}}* ended with *{{.Status.State}}*.
+        <{{.Status.URL}}|View logs> :volcano:'
   spec:
     containers:
     - args:
