--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
@@ -57,7 +57,9 @@ tests:
       cli: latest
       commands: |
         oc create namespace openshift-gitops-operator
-        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc get ns openshift-gitops-operator -o yaml
+        oc label --overwrite ns openshift-gitops-operator pod-security.kubernetes.io/warn=restricted
+        operator-sdk run bundle --security-context-config restricted -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
@@ -86,7 +88,9 @@ tests:
       cli: latest
       commands: |
         oc create namespace openshift-gitops-operator
-        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc get ns openshift-gitops-operator -o yaml
+        oc label --overwrite ns openshift-gitops-operator pod-security.kubernetes.io/warn=restricted
+        operator-sdk run bundle --security-context-config restricted -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
@@ -128,7 +132,9 @@ tests:
       cli: latest
       commands: |
         oc create namespace openshift-gitops-operator
-        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc get ns openshift-gitops-operator -o yaml
+        oc label --overwrite ns openshift-gitops-operator pod-security.kubernetes.io/warn=restricted
+        operator-sdk run bundle --security-context-config restricted -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
@@ -157,7 +163,9 @@ tests:
       cli: latest
       commands: |
         oc create namespace openshift-gitops-operator
-        operator-sdk run bundle -n openshift-gitops-operator "$OO_BUNDLE"
+        oc get ns openshift-gitops-operator -o yaml
+        oc label --overwrite ns openshift-gitops-operator pod-security.kubernetes.io/warn=restricted
+        operator-sdk run bundle --security-context-config restricted -n openshift-gitops-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n openshift-gitops-operator deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
