Add ACM minor version to job name.

--- a/ci-operator/config/stolostron/acmqe-autotest/stolostron-acmqe-autotest-main__acm2.8-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/stolostron/acmqe-autotest/stolostron-acmqe-autotest-main__acm2.8-ocp4.14-lp-interop.yaml
@@ -89,4 +89,4 @@ zz_generated_metadata:
   branch: main
   org: stolostron
   repo: acmqe-autotest
-  variant: acm-ocp4.14-lp-interop
+  variant: acm2.8-ocp4.14-lp-interop
