--- a/ci-operator/jobs/stolostron/acmqe-autotest/stolostron-acmqe-autotest-main-periodics.yaml
+++ b/ci-operator/jobs/stolostron/acmqe-autotest/stolostron-acmqe-autotest-main-periodics.yaml
@@ -12,11 +12,11 @@ periodics:
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws-cspi-qe
-    ci-operator.openshift.io/variant: acm-ocp4.14-lp-interop
+    ci-operator.openshift.io/variant: acm2.8-ocp4.14-lp-interop
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-stolostron-acmqe-autotest-main-acm-ocp4.14-lp-interop-acm-interop-aws
+  name: periodic-ci-stolostron-acmqe-autotest-main-acm2.8-ocp4.14-lp-interop-acm-interop-aws
   reporter_config:
     slack:
       channel: '#team-acm-qe-auto-notify-interops'
@@ -39,7 +39,7 @@ periodics:
       - --secret-dir=/secrets/ci-pull-credentials
       - --secret-dir=/usr/local/acm-interop-aws-cluster-profile
       - --target=acm-interop-aws
-      - --variant=acm-ocp4.14-lp-interop
+      - --variant=acm2.8-ocp4.14-lp-interop
       command:
       - ci-operator
       image: ci-operator:latest
