--- a/ci-operator/step-registry/hypershift/conformance/hypershift-conformance-chain.yaml
+++ b/ci-operator/step-registry/hypershift/conformance/hypershift-conformance-chain.yaml
@@ -4,6 +4,8 @@ chain:
   - as: conformance-tests
     from: tests
     commands: |-
+      echo "start sleep 28800"
+      sleep 28800
       CLUSTER_NAME="$(echo -n $PROW_JOB_ID|sha256sum|cut -c-20)"
       export HYPERSHIFT_MANAGEMENT_CLUSTER_KUBECONFIG="${KUBECONFIG}"
       export HYPERSHIFT_MANAGEMENT_CLUSTER_NAMESPACE="$(echo -n clusters-${CLUSTER_NAME}|sed 's#\.#-#g')"
