try vsphere-8 profile

--- a/ci-operator/config/openshift/release/openshift-release-master__ci-4.14.yaml
+++ b/ci-operator/config/openshift/release/openshift-release-master__ci-4.14.yaml
@@ -425,7 +425,7 @@ tests:
 - as: e2e-vsphere-ovn-upgrade
   interval: 168h
   steps:
-    cluster_profile: vsphere
+    cluster_profile: vsphere-8
     env:
       FAIL_ON_CORE_DUMP: "true"
     observers:
