--- a/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-master-periodics.yaml
@@ -16888,7 +16888,7 @@ periodics:
   interval: 168h
   labels:
     ci-operator.openshift.io/cloud: vsphere
-    ci-operator.openshift.io/cloud-cluster-profile: vsphere
+    ci-operator.openshift.io/cloud-cluster-profile: vsphere-8
     ci-operator.openshift.io/variant: ci-4.14
     ci.openshift.io/generator: prowgen
     ci.openshift.io/no-builds: "true"
@@ -20906,7 +20906,7 @@ periodics:
   interval: 168h
   labels:
     ci-operator.openshift.io/cloud: vsphere
-    ci-operator.openshift.io/cloud-cluster-profile: vsphere
+    ci-operator.openshift.io/cloud-cluster-profile: vsphere-8
     ci-operator.openshift.io/variant: ci-4.15
     ci.openshift.io/generator: prowgen
     ci.openshift.io/no-builds: "true"
