add gcp compute disktype testing in QE's coverage

--- a/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/provision/cucushift-installer-rehearse-gcp-ipi-provision-chain.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/provision/cucushift-installer-rehearse-gcp-ipi-provision-chain.yaml
@@ -2,6 +2,7 @@ chain:
   as: cucushift-installer-rehearse-gcp-ipi-provision
   steps: 
     - chain: ipi-conf-gcp
+    - ref: ipi-conf-gcp-osdisk-disktype-compute
     - chain: ipi-install
     - ref: cucushift-installer-check-control-plane-machinesets
     - ref: cucushift-installer-check-gcp-disktype-compute
