--- a/ci-operator/step-registry/cucushift/installer/rehearse/gcp/upi/cucushift-installer-rehearse-gcp-upi-workflow.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/gcp/upi/cucushift-installer-rehearse-gcp-upi-workflow.yaml
@@ -14,3 +14,4 @@ workflow:
     `cucushift-installer-rehearse-gcp-upi-{provision,deprovision}` chains to 
     allow other workflows to mimic and extend this base workflow without 
     a need to backport changes.
+    test arm
