--- a/ci-operator/step-registry/ipi/install/libvirt/install/ipi-install-libvirt-install-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/libvirt/install/ipi-install-libvirt-install-ref.yaml
@@ -7,6 +7,9 @@ ref:
   - name: ARCH
   - name: BRANCH
   - name: INSTALLER
+    default: "libvirt"
+    documentation: |-
+      The installation target for the job. Valid values are ['libvirt', 'powervs']
   - name: MASTER_REPLICAS
     default: "3"
   - name: MASTER_MEMORY
