cert-rotation: replace shared dir kubeconfig with the updated
Gather steps are using ${SHARED_DIR}/kubeconfig to collect cluster info, so it needs to be updated too. If that fails we get minimal info in gather-cert-rotation step

--- a/ci-operator/step-registry/openshift/e2e/cert-rotation/shutdown/openshift-e2e-cert-rotation-shutdown-workflow.yaml
+++ b/ci-operator/step-registry/openshift/e2e/cert-rotation/shutdown/openshift-e2e-cert-rotation-shutdown-workflow.yaml
@@ -16,6 +16,7 @@ workflow:
     post:
       - ref: gather-cert-rotation
       - ref: assisted-common-gather
+      - chain: gather
       - ref: baremetalds-packet-gather-metadata
       - ref: baremetalds-packet-teardown
   documentation: |-
