--- a/ci-operator/step-registry/openshift/e2e/cert-rotation/suspend/openshift-e2e-cert-rotation-suspend-workflow.yaml
+++ b/ci-operator/step-registry/openshift/e2e/cert-rotation/suspend/openshift-e2e-cert-rotation-suspend-workflow.yaml
@@ -16,6 +16,7 @@ workflow:
     post:
       - ref: gather-cert-rotation
       - ref: assisted-common-gather
+      - chain: gather
       - ref: baremetalds-packet-gather-metadata
       - ref: baremetalds-packet-teardown
   documentation: |-
