Creation workflow for ibmcloud zVSI computes

--- a/ci-operator/step-registry/hypershift/mce/ibmz/conformance/hypershift-mce-ibmz-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/conformance/hypershift-mce-ibmz-conformance-workflow.yaml
@@ -15,5 +15,5 @@ workflow:
       - chain: hypershift-mce-ibmz-destroy
       - chain: ipi-aws-post
     env:
-      HYPERSHIFT_BASEDOMAIN: "hypershift.ibmz.com"
+      HYPERSHIFT_BASEDOMAIN: "hcps390x.com"
       HYPERSHIFT_NODE_COUNT: 2
