Changing cluster names across the workflow

--- a/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
@@ -9,7 +9,7 @@ chain:
       commands: |-
         set -x
         
-        CLUSTERS_NAMESPACE="clusters"
+        CLUSTERS_NAMESPACE="hcp-ci"
         HOSTED_CLUSTER_NAME="agent-ibmz"
         export HOSTED_CLUSTER_NAME
         export HOSTED_CONTROL_PLANE_NAMESPACE="${CLUSTERS_NAMESPACE}-${HOSTED_CLUSTER_NAME}"
