Replace release stream to ci

--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
@@ -16,7 +16,7 @@ releases:
   latest:
     candidate:
       product: ocp
-      stream: nightly
+      stream: ci
       version: "4.13"
 resources:
   '*':
