skip release image validation for hypershift/kubevirt create-hostedcluster chain
Signed-off-by: Oren Cohen <ocohen@redhat.com>

--- a/ci-operator/step-registry/hypershift/kubevirt/create/hypershift-kubevirt-create-chain.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/create/hypershift-kubevirt-create-chain.yaml
@@ -75,6 +75,7 @@ chain:
         --cores ${HYPERSHIFT_NODE_CPU_CORES} \
         --pull-secret=/etc/ci-pull-credentials/.dockerconfigjson \
         --release-image ${RELEASE_IMAGE_LATEST} \
+        --annotations hypershift.openshift.io/skip-release-image-validation=true \
         ${EXTRA_ARGS}
 
       echo "Waiting for cluster to become available"
