updates to test files

--- a/ci-operator/step-registry/openshift-qe/conc-builds/openshift-qe-conc-builds-chain.yaml
+++ b/ci-operator/step-registry/openshift-qe/conc-builds/openshift-qe-conc-builds-chain.yaml
@@ -8,4 +8,4 @@ chain:
   - name: OUTPUT_FILE
     default: "kube-burner.out"
   documentation: |-
-    This workflow executes concurrent-builds v2 workload using kube-burner
+    This workflow executes concurrent-builds workload using kube-burner
