--- a/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
+++ b/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
@@ -49,34 +49,33 @@ tests:
   steps:
     cluster_profile: gcp
     test:
-      - as: che-server-test
-        cli: latest
-        commands: /bin/bash .ci/openshift-ci/test-bitbucket-no-pat-oauth-flow-raw-devfile-url.sh
-        from: src
-        resources:
-          requests:
-            cpu: 100m
-            memory: 200Mi
+    - as: che-server-test
+      cli: latest
+      commands: /bin/bash .ci/openshift-ci/test-bitbucket-no-pat-oauth-flow-raw-devfile-url.sh
+      from: src
+      resources:
+        requests:
+          cpu: 100m
+          memory: 200Mi
     workflow: ipi-gcp
 - as: bitbucket-no-pat-oauth-flow-ssh-url
   steps:
     cluster_profile: gcp
     test:
-      - as: che-server-test
-        cli: latest
-        commands: |
-          export BITBUCKET_PRIVATE_KEY=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-private-key)        
-          export BITBUCKET_PUBLIC_URL=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-public-url)        
-          /bin/bash .ci/openshift-ci/test-bitbucket-no-pat-oauth-flow-ssh-url.sh
-        credentials:
-        - mount_path: /usr/local/ci-secrets/bitbucket
-          name: bitbucket
-          namespace: test-credentials
-        from: src
-        resources:
-          requests:
-            cpu: 100m
-            memory: 200Mi
+    - as: che-server-test
+      cli: latest
+      commands: "export BITBUCKET_PRIVATE_KEY=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-private-key)
+        \       \nexport BITBUCKET_PUBLIC_URL=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-public-url)
+        \       \n/bin/bash .ci/openshift-ci/test-bitbucket-no-pat-oauth-flow-ssh-url.sh\n"
+      credentials:
+      - mount_path: /usr/local/ci-secrets/bitbucket
+        name: bitbucket
+        namespace: test-credentials
+      from: src
+      resources:
+        requests:
+          cpu: 100m
+          memory: 200Mi
     workflow: ipi-gcp
 - as: github-no-pat-oauth-flow
   steps:
