--- a/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
+++ b/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
@@ -64,9 +64,10 @@ tests:
     test:
     - as: che-server-test
       cli: latest
-      commands: "export BITBUCKET_PRIVATE_KEY=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-private-key)
-        \       \nexport BITBUCKET_PUBLIC_URL=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-public-url)
-        \       \n/bin/bash .ci/openshift-ci/test-bitbucket-no-pat-oauth-flow-ssh-url.sh\n"
+      commands: |
+        export BITBUCKET_PRIVATE_KEY=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-private-key)
+        export BITBUCKET_PUBLIC_URL=$(cat /usr/local/ci-secrets/bitbucket/bitbucket-public-url)
+        /bin/bash .ci/openshift-ci/test-bitbucket-no-pat-oauth-flow-ssh-url.sh
       credentials:
       - mount_path: /usr/local/ci-secrets/bitbucket
         name: bitbucket
