--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
@@ -7,6 +7,10 @@ base_images:
     name: ocp-addons-operators-cli
     namespace: ci
     tag: latest
+  openshift-cli-installer:
+    name: openshift-cli-installer
+    namespace: ci
+    tag: latest
 build_root:
   image_stream_tag:
     name: release
@@ -24,7 +28,7 @@ resources:
       cpu: 200m
       memory: 200Mi
 tests:
-- as: rosa-sts-test-operator
+- as: rosa-sts-test-operator-use-workflow
   cron: 0 6 * * 1
   steps:
     cluster_profile: aws-cspi-qe
@@ -42,8 +46,20 @@ tests:
       FIREWATCH_DEFAULT_JIRA_PROJECT: LPTOCPCI
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
       OPENSHIFT_VERSION: "4.13"
-      OPERATOR1_CONFIG: ""
+      OPERATOR1_CONFIG: "name=operator"
     workflow: operator-aws-rosa
+- as: rosa-sts-test-operator-use-installer
+  cron: 0 6 * * 1
+  steps:
+    cluster_profile: aws-cspi-qe
+    env:
+      OPENSHIFT_VERSION: "4.13"
+      OPERATOR1_CONFIG: "name=operator"
+      CLUSTER1_CONFIG: "name=rosa-cluster;platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=g4dn.2xlarge;timeout=90m;replicas=2;fips=true;ocm-env=stage"
+    test:
+      - ref: cluster-install
+      - ref: operator-install
+      - ref: cluster-uninstall
 zz_generated_metadata:
   branch: main
   org: rhpit
