update binary name for hcp for mce 2.4
Signed-off-by: David Huynh <dhuynh@redhat.com>

--- a/ci-operator/step-registry/hypershift/mce/kubevirt/create/hypershift-mce-kubevirt-create-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/kubevirt/create/hypershift-mce-kubevirt-create-chain.yaml
@@ -50,13 +50,12 @@ chain:
         oc patch ingresscontroller -n openshift-ingress-operator default --type=json -p \
           '[{ "op": "add", "path": "/spec/routeAdmission", "value": {wildcardPolicy: "WildcardsAllowed"}}]'
 
-        INFRA=$(oc get infrastructure cluster -o=jsonpath='{.status.infrastructureName}')
-        ETCD_STORAGE_CLASS="" --etcd-storage-class gp3-csi
-        if [ "$INFRA" == "AWS" ]; then
+        ETCD_STORAGE_CLASS=""
+        if [ "$(oc get infrastructure cluster -o=jsonpath='{.status.platformStatus.type}')" == "AWS" ]; then
           echo "AWS infra detected. Setting --etcd-storage-class"
           ETCD_STORAGE_CLASS="--etcd-storage-class gp3-csi"
         fi
-        
+
         echo "$(date) Creating HyperShift cluster ${CLUSTER_NAME}"
         /tmp/${HYPERSHIFT_NAME} create cluster kubevirt ${ETCD_STORAGE_CLASS} ${ICSP_COMMAND} \
           --name ${CLUSTER_NAME} \
