gcp-ipi-proxy-tp debug

--- a/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
+++ b/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
@@ -73,7 +73,9 @@ tests:
   cron: '@yearly'
   steps:
     cluster_profile: gcp-qe
-    workflow: cucushift-installer-rehearse-gcp-ipi-secureboot-confidential-computing
+    env:
+      FEATURE_SET: TechPreviewNoUpgrade
+    workflow: cucushift-installer-rehearse-gcp-ipi
 - as: installer-rehearse-ibmcloud
   cron: '@yearly'
   steps:
