--- a/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/cucushift-installer-rehearse-gcp-ipi-workflow.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/cucushift-installer-rehearse-gcp-ipi-workflow.yaml
@@ -3,8 +3,8 @@ workflow:
   steps: 
     pre:
     - chain: cucushift-installer-rehearse-gcp-ipi-provision
-    post:
-    - chain: cucushift-installer-rehearse-gcp-ipi-deprovision
+#    post:
+#    - chain: cucushift-installer-rehearse-gcp-ipi-deprovision
   documentation: |-
     The IPI workflow provides provision- and deprovision- steps that provision and
     deprovision an OpenShift cluster with a default configuration 
