--- a/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/proxy/cucushift-installer-rehearse-gcp-ipi-proxy-workflow.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/proxy/cucushift-installer-rehearse-gcp-ipi-proxy-workflow.yaml
@@ -3,8 +3,8 @@ workflow:
   steps: 
     pre:
     - chain: cucushift-installer-rehearse-gcp-ipi-proxy-provision
-    post:
-    - chain: cucushift-installer-rehearse-gcp-ipi-proxy-deprovision
+#    post:
+#    - chain: cucushift-installer-rehearse-gcp-ipi-proxy-deprovision
   documentation: |-
     The IPI workflow provides provision- and deprovision- steps that provision and
     deprovision an OpenShift disconnected cluster (behind proxy) with a default 
